samples/_failures_safe/1761163441_783047_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd1418ac.c: In function ‘generate_sample_logs’:
./samples/SAFE/__tmp_dd1418ac.c:137:9: error: missing terminating " character
  137 |         "2024-01-15 10:35:
      |         ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_dd1418ac.c:137:9: error: expected expression at end of input
./samples/SAFE/__tmp_dd1418ac.c:137:9: error: expected declaration or statement at end of input
